# UXA_OP

./: README.md
src/nimbro/hardware/nimbro_op_gazebo/config/: controllers.yaml  controllers_nimbro_op.yaml
src/nimbro/hardware/nimbro_op_gazebo/launch/: nimbro_op.launch  nimbro_op_controllers.launch
src/nimbro/hardware/nimbro_op_gazebo/worlds/: nimbro_op.world
src/nimbro/hardware/nimbro_op_model/launch/: uxa_op.launch
src/nimbro/hardware/nimbro_op_model/mesh/uxa_90/: head_full.stl  head_link.stl  left_ankle_link.STL  left_foot_link.stl  left_foot_link_bk.stl  left_hip_yaw_link.stl  left_lower_arm_link.stl  left_shank_link.stl  left_shoulder_pitch_link.stl  left_thigh_link.stl  left_upper_arm_link.stl  neck_link.STL  (+10 more)
src/nimbro/hardware/nimbro_op_model/robots/: igus_op_hull.xacro  uxa_op.xacro
src/nimbro/launch/config/: config_xs0.yaml  config_xs0_bk.yaml
src/nimbro/launch/hardware/: gazebo_robot_demo_sitting.launch
src/nimbro/launch/motions/P1/: init_pose_stand.yaml  sit_dive.yaml  sitdown.yaml
src/nimbro/launch/motions/P1_xs0/: uxa_getup_prone.yaml
src/nimbro/motion/gait/src/: gait.cpp  gait_engine.cpp
src/nimbro/tools/trajectory_editor/: CMakeLists.txt  package.xml
src/nimbro/tools/trajectory_editor/src/: savecontroller.cpp
src/nimbro_robotcontrol/doc/: Doxyfile
src/python_scripts/: CMakeLists.txt  package.xml
src/python_scripts/src/: doubler.py  fancy_action_client.py  fancy_action_server.py  message_publisher.py  message_subscriber.py  move_joint.py  service_client.py  service_server.py  simple_action_client.py  simple_action_server.py
(+1 files in other folders)
