<?xml version="1.0"?>
<package>
	<name>demo_my_ros</name>
	<version>0.0.0</version>
	<description>
    		Packages from Part 1 of Programming Robots with ROS.
  	</description>

	<maintainer email="pallgeuer@ais.uni-bonn.de">Philipp Allgeuer</maintainer>
	<license>TODO</license>

	<buildtool_depend>catkin</buildtool_depend>
	<build_depend>rospy</build_depend>	
	<build_depend>actionlib</build_depend>
	<build_depend>actionlib_msgs</build_depend>
	<build_depend>message_generation</build_depend>
	<build_depend>std_msgs</build_depend>
	<run_depend>rospy</run_depend>
	<run_depend>actionlib</run_depend>
	<run_depend>actionlib_msgs</run_depend>
	<run_depend>message_runtime</run_depend>
	<run_depend>std_msgs</run_depend>
	<!-- The export tag contains other, unspecified, tags -->
	<export>
	<!-- Other tools can request additional information be placed here -->
	</export>
</package>
